--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 kotlin.code.style=official
 org.gradle.caching=true
 org.gradle.configuration-cache=true
+kotlin.daemon.jvmargs=-XX:+UseParallelGC -Xmx4096m -Dfile.encoding=UTF-8
